Avoid flex shrink for icons on wrapping titles

--- a/media/css/cms/pages/flare26-release-notes.css
+++ b/media/css/cms/pages/flare26-release-notes.css
@@ -94,6 +94,10 @@
     display: flex;
     font-size: 1.5rem; /* 24px - static */
     gap: var(--token-spacing-sm);
+
+    .fl-icon {
+        flex-shrink: 0;
+    }
 }
 
 .fl-c-release-notes-pre-footer {
